:bug: Featured Collection: Fix text color in dark mode

--- a/leblanc/components/home/FeaturedCollection/FeaturedCollection.module.css
+++ b/leblanc/components/home/FeaturedCollection/FeaturedCollection.module.css
@@ -63,3 +63,9 @@
 .contentfooter {
   @apply text-base sm:text-lg md:text-xl xl:text-2xl pb-4;
 }
+
+:global(.dark) {
+  & .content {
+    @apply text-text-primary;
+  }
+}
